<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <TextView
        android:id="@+id/viewDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_descripcion" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewDescripcion"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_cantidad" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/viewCantidad"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewTiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_tiempo" />

    <EditText
        android:id="@+id/txtTiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewTiempo"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewPeriocidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_Periocidad" />

    <EditText
        android:id="@+id/txtPeriocidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:labelFor="@+id/viewPeriocidad"
        android:textSize="24sp" />


    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#03A9F4"
        android:text="@string/btn_guarda"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_delete" />

</LinearLayout>